--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "name": "cyber-predator",
+  "name": "backend",
   "builds": [
     {
       "src": "server.js",  // path to your server.js file
